--- a/_posts/2017-12-29-Hanoi.markdown
+++ b/_posts/2017-12-29-Hanoi.markdown
@@ -12,7 +12,9 @@ First, some tips for Hanoi:
 
 Now for the story:
 
-I landed in Hanoi late afternoon and had read that there should be a bus going into the city from somewhere at the airport. Luckily, I saw a VietJet bus (the airline I flew with apparently had a bus for its customers) immediately after exiting the airport and ended up paying 30,000 Dong (ca 1 EUR) for a trip to the center of the city. They did not drop me off at my hostel, and when I got off, there were many annoying scooter and taxi drivers that wanted me to buy their service. I was very pissed off at pushy taxi drivers at this point, so I immediately said no and showed them through the process as I booked and went into a grab car to my hostel, the Old Quarter View Hanoi Hostel.
+I landed in Hanoi late afternoon and had read that there should be a bus going into the city from somewhere at the airport. Luckily, I saw a VietJet bus (the airline I flew with apparently had a bus for its customers) immediately after exiting the airport and ended up paying 30,000 Dong (ca 1 EUR) for a trip to the center of the city. They did not drop me off at my hostel, and when I got off, there were many annoying scooter and taxi drivers that wanted me to buy their service. I was very pissed off at pushy taxi drivers at this point, so I immediately said no and showed them through the process of me booking and going into a grab car to my hostel, the Old Quarter View Hanoi Hostel. I hope this image below that I took on the way to the hostel gives you a better sense of the Vietnamese traffic situation:
+
+![retarded traffic](https://lh3.googleusercontent.com/j7m5HT7lqsIxVsjW1akwkmUHURdzzizCCXWarQMMEY4Q11_kpdI0u92F5LFu7GgyDLttlB9fRzZ6qGI3tuU9Kch-Wl6n6cC5CtfM8dSjNGytJhnmPVHkYXUX_VYptq9xxeLTMKw7dg)
 
 At the hostel, I immediately became friends with a dutch guy who slept on the bed above mine. He had apparently worked as an English teacher in a remote vietnamese town close to China for 3 weeks before he decided it was too much of a local experience for him and went to Hanoi for a few days before going back to Netherlands to celebrate Christmas with his family. A few minutes later, a dutch very cheerful girl walked in and settled down in the bed opposite to mine. We quickly became friends and decided to go to the Cha Ca Thang Long restaurant to eat some of the delicious fish that Eric the new zealander had named the best fish he had had during his exchange.
 
@@ -20,15 +22,41 @@ First, however, we went down to the hostel's lounge/restaurant area to grab the 
 
 We quickly went to the restaurant to eat some fish. Over here, we quickly found out two things: Nina does not eat fish, and this restaurant only serves one dish - the fish dish. We ended up eating here anyways, because we did not want to risk missing out on the best fish during our travels; Nina would have to eat somewhere else afterwards. Having now eating the fish, I have to say it was one of the best I had had in Asia, but apparently Dirk had had an even better one in China.
 
+![Cha ca fish](https://lh3.googleusercontent.com/kM93a4PH75Z7HLdMq0USekzhbLH3Jr99gggIjXU2q3HifrivqurMQM1oi7aNKobqb7JWNqUELbiw0stbCB1Ytinbmox0uD_lak7eBRVY5tIlF1mWUw1fdws9qOe3ZfnxoAFigOaWug)
+
 After the restaurant, we strolled around a bit and tried to find a nice café to have a coffee at. We ended up at Zulu Café, and I had a Ca Phe Trung (egg coffee), which apparently was some sort of special order, as the café owner looked at me with an extremely wide smile as she gave it to me. She seemed very happy about us being there, as she wanted to take a group photo with us afterwards. What a nice lady!
+
+![egg coffee](https://lh3.googleusercontent.com/4PzCaiV6Y0lzAfT47V9JLAxpyNfxQF9MSRlz-9c21gSzB061cJbTrF4917So6qsUlFtR_mlP5LoCtA0Pj-N0gHwxWYKAcyzxzIOSZdIvAOVOerMbDPk4O9Bq4Gq2MulOtnLTRs-2Zw)
+
+![zulu coffee](https://lh3.googleusercontent.com/TcrEaLzmCjlGmrE5BiaSRBj1zuzn1erZVuTvBej1v7GwiP6yoEChgpaEx1n7BB1oFcF4XefBYseBZkTTgjZnNESr5WnTXV8kxvxjb7beKzVcDBkjq9NR87CSPRwBR4CQK-H56x1NKg)
 
 After the café, we made our way back home. On the way, we got our first view of people burning money. Apparently they burn fake money here, in order to give their lost beloved ones money for the afterlife. To us, however, it looked as if someone had dumped a huge pile of money on a homeless lady who in turn burned it to keep herself warm.
 
+<iframe src="https://drive.google.com/file/d/1iYweQPukaSpWMu_FEh1xoc2XapUJVy_aDA/preview" width="640" height="480"></iframe>
+
 We kept on walking and ended up strolling through Hanoi's Sunday night market, where Kim stopped at most booth to have a look at shiny things. Eventually, we managed to make our way back to the hostel, and I had a good night's sleep.
 
-Next day, I joined Nina and Kim on their exploration of the city. I think Dirk slept when we decided to go, so it ended up being us. Anyways, we ended up going to the lake and the Ngoc Son Temple in the middle of the lake (which I believe had a 30,000 Dong (ca 1 EUR) entrance fee). Thereafter, we strolled around the lake and sat down at the Hapro Bon Mua Nha Tron Ho Guom café by the lake. It was a nice pause.
+Next day, I joined Nina and Kim on their exploration of the city. I think Dirk slept when we decided to go, so it ended up being us. Anyways, we ended up going to the lake and the Ngoc Son Temple in the middle of the lake (which I believe had a 30,000 Dong (ca 1 EUR) entrance fee). On the way here, we saw quite a few couples getting photos of themselves whilst very dressed up. We asked about it later and got the (in my opinion, quite implausible) explanation that they had graduated and that this was what they do upon graduation.
 
-After the café we went to the Vietnamese Women's Museum, because I had gotten the feeling that Vietnamese women played a big role in Vietnam's history and society. The museum, however, turned out to be overall quite boring. It had a lot of information of how women dress during traditions, how birth and marriage is handled in Vietnam and other quite boring facts. However, it also had a couple of interesting sections about the war and the so called Mother God.
+![couples photo](https://lh3.googleusercontent.com/2QcJzZSyJ1qZu3uED1Wr95GQsrodju7eRAPbIrn5Q4Y8distjHpTt0lDocqqwJKBZOjT4xefLJuVHvYsDPCmBmXKztHDMseNbm34RurkrunKPsSo9qejgrSwCsGyFcchSoR905LZFA)
+
+![photographers](https://lh3.googleusercontent.com/_RN273cPc_4DxQLv5ubdfP0OvBLd4cw7yrFig8Tx1eCFu2QYliLCwF5GKBmTegSYZ-vnKgjB8zoEssTV3TTjW-IJsMqZhivxLUqFon0cuzNAbRo6ElGD3ktYBIhF6gBn0_uDPZyG0w)
+
+Oh, and some temple photos:
+
+![temple 1](https://lh3.googleusercontent.com/T3Ow4MMoVTFPjaASCiKHlNa9dRnQjp-rz3WVF10y3WmjC_inKzATZcRVbaAg9mzQQctl81RbJ81dyUNzPGjT8GjWYJHLXrHOYOdaa3VhrpcNumYo7MO38KswcHxRNKkw1KArgXlmrw)
+
+![temple 2](https://lh3.googleusercontent.com/sM13WsSVyz-3nE711eOb6nVapdIcwOR_xSjr1VXhnUW9hghRx0-2Re9jofK9cB0nFbLpV9IIu35RHFGLQtKeFNAd1XRlaX5UY63g9vBLxEKfUd4SWn8LNB30LxWPi5a8if-TOh44IQ)
+
+![temple 3](https://lh3.googleusercontent.com/TXd21sHk4JsQyuW7d35TqD1M8Rrn6SYbbaBwHePhmcAE4_nbBBMmFB3gfG8UGRaGS2a1m82tKSavWAlutC8ynPEWn6oQijthq5t5vtBEMVV1qRin_1k5uwJkuVJd-l1QSpwcfoHqXA)
+
+![temple 4](https://lh3.googleusercontent.com/h3V4DswvuEx541qQLOt8FMWlzP3CIbTgvnQy9fL_cZMkuv8eJxxgyIZ6Ny51hK1SCuJ9IvGzamHheBh3jkv7Btbx3k3Who0HHtdS7DPISc05BKNSEvYco2jDzSYB6gyUKEsLzzJfrg)
+
+After the Ngoc Son temple, we strolled around the lake and sat down at the Hapro Bon Mua Nha Tron Ho Guom café by the lake. It was a nice pause before we went to the Vietnamese Women's Museum.
+
+We went here because I had gotten the feeling that Vietnamese women played a big role in Vietnam's history and society. The museum, however, turned out to be overall quite boring. It had a lot of information of how women dress during traditions, how birth and marriage is handled in Vietnam and other quite boring facts. However, it also had a couple of interesting sections about the war and the so called Mother God.
+
+![Women museum](https://lh3.googleusercontent.com/slsep7PsIVPnFiIpYR1QTrR5cpzxh7oDtYSUL8JW3z00WBXMi7u4yEnRgmoW5QbKHMK_oqcFvMIS9zWp8VkJf8yVGz_9zjPAHhlG6MbPVVGY3lNn7Pf2W3kwLZ2fbfeB03DqaUq_4Q)
 
 The Mother God seemed to be its own religion consisting of female gods/spirits representing natural entities, such as Mother Nature and Mother of water if I remember correctly. This was a completely new religion that I had never heard of before, and it seemed peaceful and a bit different from others, considering the focus on female gods.
 
@@ -36,22 +64,46 @@ The war section gave a view of how big women's role were during the war. Accordi
 
 Anyways, after the museum, we went to Bun Cha Huong Lien, which is a restaurant that serves Bun Cha and that Obama visited. I ate the Obama menu here to get the full experience!
 
+![bun cha obama](https://lh3.googleusercontent.com/W8t7dxDkDCvMOVbXznVQK0ipYkn-8o0Fd0Yz84xCAhbEaeC-kdnHF197DDD3MwXgdkfaxQSiUUTuY7SSKXR6eaUrQ3atkSvt5FGkXYX3ucQEOWdtj1hgDWAJP3_3zFyqQWQ4sD_s6A)
+
 Next up, we went to Giang Café, where I had another Ca Phe Trung (egg coffee), to see if this was better (it was, a little bit). This is a very popular café for locals, which could be seen by the small interior with small chairs and small tables, etc. It was not that cozy in here, so if you need a nice atmosphere, you should try another café.
 
 Moving on from the café, we went to our activity for the night: streetfood tour. We went to the dutch travel agency 'Friends Travel Vietnam' and paid 660,000 Dong (ca 24 EUR) for an evening worth of local street food in Hanoi. On this streetfood tour, we tried out five different streetfood restaurants and ate some sort of pancake/omelette, some sort of bean dessert, Vietnamese tacos, Bun Cha, Vietnamese springrolls and, of course, Ca Phe Trung. It was a nice streetfood tour, and I managed to try out a few new things. Only sad thing was that I had already tried many of the dishes, and that I cannot recall the names of the streetfood restaurants. You can see some of the foods below!
+
+![streetfood 1](https://lh3.googleusercontent.com/3aVbglwvjDDEAXs6qCxzeAAny75nXmV1QlNotjN3Prmas0Q8VvPbVSQQBT3nSzKsyC6PG0CxO5cA5didJ2tNDwuRLyVJqViutXGl3CZ9N35cihtqe_A0k4C5YZ6RIYsDnqOj3tF0Dw)
+
+![streetfood 2](https://lh3.googleusercontent.com/yrQEqn7k_u_AHZoyfUGxjK_lP8BMzhvz0NQ-PH0kayH0J1e-ZqxltxrzlGqM6wsV0tsBVQT73XY5IgB-t1slZiqBkLwYLgNeAMBl_CjPnPYwa8OB2Ke9HR-v89CQRDNDkE-EbQyxnA)
+
+![streetfood 3](https://lh3.googleusercontent.com/d7fkLcSXMGmQmXVArbKw33XQvd37JSntjTdepi21U5KJ5_1jO8YVO9XMESgeqG0Fn9DmvFQdxYG5yB0ZH6n2lqAzu9Vuh14LZWcQ7vtKL0GGjfEjvQjDqkk0A_ze2BQsDDA6MFU4zg)
+
+![streetfood 4](https://lh3.googleusercontent.com/rgA2E0myGuz645gKd9u3Z22ktSr7DePNeYT93jatTxLSk3QnOr4UX2VuFvAnonymRyEmTvfSok7UgWF4aUxGgYpcnYLqj14LU2CsIeBjgpqHn4Ttg-nhVnpGkk-t8SbEHI-0no4bhw)
+
+![streetfood 5](https://lh3.googleusercontent.com/xIubw0r0kIs2usRPlyEasbsA_P-NAVF_u3zkvtQAAJMjj5piD3Ks9LAv88UZoBsfbD1fKtQQCD40YC9DFKzT7JW94H6Q1fscx3oLQg4PzjdqMbvawXMhuaNco6yuFObARGk0hnFrxw)
+
+![streetfood 6](https://lh3.googleusercontent.com/fr8HK6QgFG_F0dPNRA4hr4bOQ4namzIw2-IUjfg806ygtmROTY_VROFQQ2Unk1Hx2AWSLIIut7JA_v5ZreMBQUe1avr3I8b3RG721jYTIvwLidzT1HCADLOJc6DAQ0u4hWJox4X0JQ)
+
+![streetfood 7](https://lh3.googleusercontent.com/6dJVCFPlSNezImqJiWeu-GV-BrqGR6dIK9js7O65WkIbsVUOAR5yV2rhhiurjtB_Z0gWD9_sL7b1fvVR4P_rLqkcX-HobaajjR2ud60Qrn2M-Rk5Pz1EiFViPGDZc6ehTcIqrENOMA)
 
 When the tour ended, we walked straight back to the hostel to get some sleep. Next day, I went on my Halong Bay cruise, which I will write about in a separate blog post soon. The day after that, I got back to the hostel around 16-17 and when I got into my room I was happily surprised to see Dirk there talking to a couple of other dutch backpackers that he had befriended. Almost immediately, he introduced me to Marta and Jasper and soon thereafter, he invited me to eat pigeon after I had reinstalled myself in the room.
 
 A few minutes later, me, Dirk and Marta sat down in a restaurant on Hang Giay street, close to the hostel. Marta turned out to be vegetarian, so me and Dirk shared the pigeon amongst ourselves. I am happy about that, as the pigeon was quite boring and dry to eat. It was nevertheless a nice thing to have tried out!
 
+![pigeon](https://lh3.googleusercontent.com/NNUamoSv8wfMSo-WfbwgmL6ojUgxx5GxtEKrML6CBB978izOiT0TS4X1njRdnLSNcEIjyS59B9FeAj0NCP0cPD2uCdj-RKWRdkoeiT9PqUdPPbTz2jG97jKx-Rd1Z6p5am-F7QcJQw)
+
 What was less nice was that there seemed to be tension building up between Dirk and Marta. He made remarks on her veganism among other things, which made her a bit more on her guard. Not noticing this issue, I took us to the King Roti bakery to eat some buns I had been recommended from a couple of Australian girls on the Halong Bay cruise. They were quite nice to eat and thus go up on my recommended list.
+
+![king roti](https://lh3.googleusercontent.com/pqyEB8xVT9my7FwGIIHNDj2Zj1g1fYWzRy8A_CKSFqq6lUxR71a_yDaEFQajIzMdsVpe4ln45B2feuUtNEXssyLc5kERhsYPRmsfHlV439w6qPVynjC8ktSzFoYZPKANGokFNplqVQ)
 
 Afterwards, we went back to our hostel to enjoy the free beer between 18-18.30, and to join up with Jasper. Correction: me and Dirk enjoyed our free beer, as Marta only stared down her phone throughout our conversation. Inobservant as I am, I kept on happily conversing until Dirk suddenly started remarking against Marta's obsessive phone usage; asking her if she wanted to continue to hang out, and then telling me that she would not come back when she left the room. Oh, now I could definitely feel the tension that had built up.
 
 Of course, she came back, and we decided to go to the Binh Minh jazz club and meet up with Jasper and some of Marta's friends there. On the way there, the Marta-Dirk tension started to get a clear shape as Dirk made a remark against Marta every time he opened his mouth. Trying my best to put out the fire Dirk insisted on putting his gasoline to, I started to get an odd feeling about this situation. Was this a horrible attempt to tease her in a romantic way? Was he trying to light a spark between them with a gasoline tank and hand grenade? Oh, the people you meet on your backpacking trips...
 
-Needless to say, I was happy to finally arrive at the jazz bar, to have an awkward 20 minutes of awkward silence and small talk before the band got on. Marta's friends (a couple of Danish girls) and Jasper arrived soon thereafter, and we sat in silence for most of the evening, listening to the band and enjoying the atmosphere. This was a quite nice last night to have in Hanoi, and I was quite happy when we left a few hours later. Happy that we had had a good niht of jazz. Happy to talk to some other Scandinavians. A bit sad that my phone battery had died before the jazz night started. Happy that the awkward conflict had ended.
+Needless to say, I was happy to finally arrive at the jazz bar, to have an awkward 20 minutes of awkward silence and small talk before the band got on. Marta's friends (a couple of Danish girls) and Jasper arrived soon thereafter, and we sat in silence for most of the evening, listening to the band and enjoying the atmosphere. This was a quite nice last night to have in Hanoi, and I was quite happy when we left a few hours later. Happy that we had had a good niht of jazz. Happy to talk to some other Scandinavians. A bit sad that my phone battery had died before the jazz night started, so I could not take any pictures. Happy that the awkward conflict had ended.
 
 Well, to some extent anyways. Marta avoided me and Dirk, and when I asked her how she and the Danish girls knew each other, she responded with "magic". Oh, ladies an gentlemen, 'twas in this defining moment that I also got happy about soon parting ways to get some good night's sleep.
 
 Next day, I used all my strength, sweat and tears to close my overfully packed bag. Then I went to the nearby bus stop to get on bus 86, which took me to the airport for 30,000 Dong (ca 1 EUR). Having entered Vietnam in a very expensive way, I now exited in the cheapest way. Travelling, after all, can teach you a few good lessons.
+
+And to end this post, below is a photo of the bridge to the Ngoc Son Temple in the lake!
+
+![lake bridge](https://lh3.googleusercontent.com/P3AzOi6Kt9XuNx52tdUuWoh6vczsLFu9pvslzdGYQPP0dP_iciWJHoQxMrko1TVG2XeSpXfOUahQLodAeX5932ali9JPd8gwy6WzW4V9CW59PzSGvW-mpWkZgcS0tQywE5J8ftaMDQ)
