--- a/_posts/2017-12-29-Hanoi.markdown
+++ b/_posts/2017-12-29-Hanoi.markdown
@@ -5,7 +5,9 @@ date:   2017-12-29 14:00:00 +0800
 categories: jekyll update
 ---
 
-First, some tips for Hanoi:
+Before we start, here is the [Google photos](https://photos.app.goo.gl/5mt61endEsulAXMx1) album of this trip!
+
+Next, here are some tips for Hanoi:
 
 * Look up the weather before you travel to northern Vietnam. I went here in mid December and it was around 5-20 degrees throughout the day.
 * If you like fish, eat at Cha Ca Thang Long, as they serve some delicious food. According to Eric the new zealander, this was the most delicious fish he had in Asia during exchange, and I gotta say it was a par with the Lombok fish.
